fixed form clear button for safari and decreased font size on mobile for blogs

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -64,6 +64,7 @@
 }
 
 .contactForm > input.clearform {
+    -webkit-appearance: none;
     min-height: 3em;
     font-weight: 400;
     color: lightgrey;
